# episod-slack-bot

./: .travis.yml  Cargo.toml
src/: extract.rs  filters.rs  helpers.rs  lib.rs  slack.rs
