[package]
name = "episod"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

[lib]
name = "episod"
path = "src/lib.rs"

[dependencies]
# Crates to interact with AWS
lambda_runtime = "0.2"
lambda_http = "0.1"
aws_lambda_events = "0.2"
rusoto_core = "0.42"
rusoto_sns = "0.42"

# Crate with slack types
slack_push = { git = "https://github.com/mockersf/slack-push" }

# Crate to make http request from lambda
reqwest = { version = "0.10", features = [ "blocking", "json" ] }

# Serde
serde = {version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

# Crates related to domain
chrono = { version = "0.4", features = [ "serde" ] }
# lazy_static = "1.4"
failure = "0.1"
rand = "0.7"
select = "0.4"
regex = "1.3"

